commiting ui related changes with new test case

--- a/Services/src/main/resources/ui/templates_dir.html
+++ b/Services/src/main/resources/ui/templates_dir.html
@@ -11,6 +11,12 @@
 				<for-each data="${_data}" loop-var="value" index-var="attr">
 					${attr} = ${value}<BR/>
 				</for-each>
+
+				<set-var name="_data1" expr="context.invokeAction('data.json')"/>
+				<BR/><BR/>
+				<for-each data="${_data1}" loop-var="value" index-var="attr">
+					${attr} = ${value}<BR/>
+				</for-each>
 			</div>
 		</content>
 	</directive>
