corrected <for-each> and added support for jquery objects

--- a/Services/src/main/resources/ui/test_dir.html
+++ b/Services/src/main/resources/ui/test_dir.html
@@ -29,9 +29,10 @@
   </head>
   <body ng-app="application">
     
-	<yk-test attr1="val1">Some init content</yk-test>
-	<yk-help></yk-help>
-	<yk-div id="myDiv" content="My Div content"></yk-div>
+	<yk-help>
+		<yk-sub name="sub1"></yk-sub>
+		<yk-sub name="sub2"></yk-sub>
+	</yk-help>
 	
 	
 	<BR/>
