--- a/Services/src/main/resources/ui/templates_dir.html
+++ b/Services/src/main/resources/ui/templates_dir.html
@@ -17,6 +17,16 @@
 				<for-each data="${_data1}" loop-var="value" index-var="attr">
 					${attr} = ${value}<BR/>
 				</for-each>
+				================================================<BR/>
+				<for-each data="${_data1.arr}" loop-var="value" index-var="idx">
+					<if test="${value} % 2 == 0">
+						<continue/>
+					</if>
+					<if test="${value} &gt; 9">
+						<break/>
+					</if>
+					Value at ${idx} is ${value}<Br/>
+				</for-each>
 			</div>
 		</content>
 	</directive>
@@ -24,7 +34,14 @@
 	<directive name="ykHelp">
 		<content>
 			<div>
-				Some help message
+				Some help message<BR/>
+				<set-var name="_subElem" expr="context.element.children()"/>
+				
+				<for-each data="${_subElem}" loop-var="elem" index-var="attr">
+					<set-var name="_elemName" expr="$(context.elem).attr('name')"/>
+					
+					Found sub element with name - ${_elemName}<BR/>
+				</for-each>
 			</div>
 		</content>
 	</directive>
