In Progress, Icons, Grid icons and context menu

--- a/Services/src/main/resources/webutils/webutils-dialogs.html
+++ b/Services/src/main/resources/webutils/webutils-dialogs.html
@@ -40,7 +40,7 @@
 	<!-- END OF CONFIRM BOX -->
 	
 	<!-- Info BOX -->
-	<div class="yk-info-message" id="webutilsInfoBox">
+	<div class="yk-info-message" id="webutilsInfoBox" >
 		<div class="content" style="width: 100%;">
 		</div>
 		<button type="button" class="yk-info-close-button" aria-label="Close" ng-click="closeInfo()">
@@ -49,4 +49,19 @@
 	</div>
 	<!-- End of Info BOX -->
 
+	<!-- In Progress Dialog -->
+	<div class="modal fade" id="webutilsInProgressDialog" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<!-- Content -->
+				<div class="modal-body" style="padding: 1.5em; text-align: center;">
+					<img alt="In Progress..." src="/ui/images/inProgress.gif"/>
+					<span style="font-weight: bold; font-size: 1em; margin-left: 2em;">Please wait! Work in progress...</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End of In progress dialog -->
+	
+	
 </div>
