Made extension point non-unique. In ui added support for onchange event and way to uniquely identify form-field container div. Added support to customize in-progress icon

--- a/Services/src/main/resources/webutils/webutils-dialogs.html
+++ b/Services/src/main/resources/webutils/webutils-dialogs.html
@@ -55,13 +55,11 @@
 			<div class="modal-content">
 				<!-- Content -->
 				<div class="modal-body" style="padding: 1.5em; text-align: center;">
-					<img alt="In Progress..." src="/ui/images/inProgress.gif"/>
+					<img alt="In Progress..." src="{{getAppConfiguration('loadingIcon')}}"/>
 					<span style="font-weight: bold; font-size: 1em; margin-left: 2em;">Please wait! Work in progress...</span>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- End of In progress dialog -->
-	
-	
 </div>
