Bug fixes + Reauthenticate in client during session timeout

--- a/Services/src/main/resources/webutils/webutils-dialogs.html
+++ b/Services/src/main/resources/webutils/webutils-dialogs.html
@@ -52,9 +52,9 @@
 	<!-- In Progress Dialog -->
 	<div class="modal fade" id="webutilsInProgressDialog" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
 		<div class="modal-dialog" role="document">
-			<div class="modal-content">
+			<div class="modal-content" style="min-width: 30em; width: 30em;">
 				<!-- Content -->
-				<div class="modal-body" style="padding: 1.5em; text-align: center;">
+				<div class="modal-body" style="padding: 0.1em; text-align: center;">
 					<img alt="In Progress..." src="{{getAppConfiguration('loadingIcon')}}"/>
 					<span style="font-weight: bold; font-size: 1em; margin-left: 2em;">Please wait! Work in progress...</span>
 				</div>
